# _playing_with_custom_bzlmod_extensions

./: BUILD.bazel  MODULE.bazel  README.md  extensions.bzl  package-lock.json  package.json
overrides/es6-promise/: BUILD.bazel  MODULE.bazel
overrides/rsvp/: BUILD.bazel  MODULE.bazel
